add self service password

--- a/conf/etc/nginx/conf.d/fd.conf
+++ b/conf/etc/nginx/conf.d/fd.conf
@@ -6,12 +6,16 @@ server {
     root /var/www/fusiondirectory/html;
     server_name _;
 
+    location /ssp {
+        root /var/www/self-service-password;
+    }
+
     location ~ ^/.*\.php(/|$) {
         expires off; 
         fastcgi_pass 127.0.0.1:9000;
         fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
         fastcgi_param DOCUMENT_ROOT $realpath_root;
         include /etc/nginx/fastcgi_params; 
-  }
+    }
   
 }
