--- a/conf/etc/nginx/conf.d/fd.conf
+++ b/conf/etc/nginx/conf.d/fd.conf
@@ -4,13 +4,13 @@ server {
     access_log /var/log/nginx/access.log;
 
     root /var/www/fusiondirectory/html;
-    server_name _;
 
     location ~ ^/.*\.php(/|$) {
         expires off; 
         fastcgi_pass 127.0.0.1:9000;
         fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
         fastcgi_param DOCUMENT_ROOT $realpath_root;
+        fastcgi_param HTTP_X_FORWARDED_HOST $http_host;
         include /etc/nginx/fastcgi_params; 
     }
   
